--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -9,6 +9,10 @@
 .menu-popper {
     padding: 8px 0;
 }
+.menu-body {
+    overflow-y: auto;
+    max-height: 460px;
+}
 
 .menu-item {
     width: 100%;
@@ -32,6 +36,7 @@
 //Header
 .header {
     position: relative;
+    flex-shrink: 0;
     height: 50px;
     margin-top: -8px;
 }
