--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -1,4 +1,7 @@
 .wrapper {
+    /* hiển thị được scrollbar trong body */
+    display: flex;
+    flex-direction: column;
     width: 100%;
     max-height: (100vh -96px) -60px;
     padding: 8px;
